--- a/Ghibli.css
+++ b/Ghibli.css
@@ -51,3 +51,26 @@ body {
     margin-left: 10px;
     margin-right: 10px;
 }
+.top__bar {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0px;
+    background-color: rgb(59, 83, 35);
+    height: 100px;
+    width: 100%;
+}
+.top__bar-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 100px;
+    height: 100px;
+}
+.top__bar-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 28px;
+}
