--- a/Ghibli.css
+++ b/Ghibli.css
@@ -12,7 +12,7 @@ body {
     border-color: rgb(59, 83, 35);
     border-radius: 10px;
     margin: 0;
-    background-color: white;
+    background-color: #f1eed5;
     text-align: center;
     margin: 20px;
     padding: 15px;
@@ -37,7 +37,7 @@ body {
     border-color: rgb(59, 83, 35);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: white;
+    background-color: #f1eed5;
     margin-top: 0px;
     display: flex;
     justify-content: center;
@@ -63,7 +63,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: #f1eed5;
     width: 100px;
     height: 100px;
 }
@@ -71,6 +71,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #f1eed5;
     font-size: 28px;
 }
