--- a/Ghibli.css
+++ b/Ghibli.css
@@ -12,7 +12,7 @@ body {
     border-color: rgb(59, 83, 35);
     border-radius: 10px;
     margin: 0;
-    background-color: #f1eed5;
+    background-color: white;
     text-align: center;
     margin: 20px;
     padding: 15px;
@@ -37,7 +37,7 @@ body {
     border-color: rgb(59, 83, 35);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: #f1eed5;
+    background-color: white;
     margin-top: 0px;
     display: flex;
     justify-content: center;
@@ -58,12 +58,15 @@ body {
     background-color: rgb(59, 83, 35);
     height: 100px;
     width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 .top__bar-box {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f1eed5;
+    background-color: white;
     width: 100px;
     height: 100px;
 }
@@ -71,6 +74,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #f1eed5;
+    color: white;
     font-size: 28px;
 }
