--- a/Ghibli.css
+++ b/Ghibli.css
@@ -1,10 +1,14 @@
 body {
+    background-color: rgb(168, 198, 139);
+    margin: 0;
+}
+.body {
     margin: 0;
     background-color: rgb(168, 198, 139);
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 40px
 }
 .card {
     border-style: solid;
@@ -12,9 +16,8 @@ body {
     border-color: rgb(59, 83, 35);
     border-radius: 10px;
     margin: 0;
-    background-color: white;
+    background-color: #f1eed5;
     text-align: center;
-    margin: 20px;
     padding: 15px;
     display: flex;
     justify-content: center;
@@ -33,11 +36,9 @@ body {
     padding: 20px;
     border-style: solid;
     border-width: 3px;
-    border-top-width: 0px;
     border-color: rgb(59, 83, 35);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: white;
+    border-radius: 10px;
+    background-color: #f1eed5;
     margin-top: 0px;
     display: flex;
     justify-content: center;
@@ -55,6 +56,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 0px;
+    margin-bottom: 40px;
     background-color: rgb(59, 83, 35);
     height: 100px;
     width: 100%;
@@ -66,7 +68,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: #f1eed5;
     width: 100px;
     height: 100px;
 }
@@ -74,6 +76,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #f1eed5;
     font-size: 28px;
+}
+.button {
+    appearance: none;
+    background-color: rgb(168, 198, 139);
+    border-style: solid;
+    border-width: 3px;
+    border-color: rgb(59, 83, 35);
+    border-radius: 10px;
+    color: #f1eed5;
+    font-size: 18px;
+    margin: 20px;
+    padding: 100px;
 }
